--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "jsonwebtoken": "^8.5.1",
+        "jwt-decode": "^3.1.2",
         "react-router-dom": "^5.2.0"
     }
 }
