--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
+        "react-file-base64": "^1.0.3",
         "react-router-dom": "^5.2.0"
     }
 }
