Add required dependancies to composer.json

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "tymon/jwt-auth": "dev-develop"
+        "tymon/jwt-auth": "dev-develop",
+        "ext-pdo_sqlite": "*",
+        "ext-php-sqlite3": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
