--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/ui": "^3.3",
         "tymon/jwt-auth": "dev-develop",
         "ext-pdo_sqlite": "*",
-        "ext-php-sqlite3": "*"
+        "ext-php7.4-sqlite": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
