--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
         "react-file-base64": "^1.0.3",
-        "react-router-dom": "^5.2.0"
+        "react-redux": "^7.2.5",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.1.1",
+        "redux-thunk": "^2.3.0"
     }
 }
